--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
-	}
+	},
+	"description": "A project that does something awesome"
 	
 	
 }
